--- a/components/HeaderNav/HeaderNav.module.scss
+++ b/components/HeaderNav/HeaderNav.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content:space-between;
   opacity: 1;
+  font-size: 24px;
   li {
     display: inline;
     margin-left:.5rem;
@@ -21,6 +22,9 @@
   padding: 1rem 0px;
   width: 100%;
   z-index: 5;
+  h1{
+    display: inline;
+  }
   h2 {
     display: inline;
   }
@@ -42,6 +46,8 @@
 }
 
 @media only screen and (max-width: 640px) {
-  
+  .list{
+    font-size: 16px;
+  }
 }
 
